--- a/index.html
+++ b/index.html
@@ -113,19 +113,17 @@
                                         <th onclick="sortTable(7)">Overall Improvement over BS</th>
                                         <th onclick="sortTable(8)">Build time (ns)</th>
                                     </tr>
-                                    {% for item in indexes %}
                                     <TR>
-                                        <TD>{{item.rank}}</TD>
-                                        <TD>{{item.name}}</TD>
-                                        <TD>{{item.xsmalltime}}</TD>
-                                        <TD>{{item.smalltime}}</TD>
-                                        <TD>{{item.mediumtime}}</TD>
-                                        <TD>{{item.largetime}}</TD>
-                                        <TD>{{item.xlargetime}}</TD>
-                                        <TD>{{item.improvement}}</TD>
-                                        <TD>{{item.buildtime}}</TD>
+                                        <TD>1</TD>
+                                        <TD>test</TD>
+                                        <TD>2</TD>
+                                        <TD>4</TD>
+                                        <TD>6</TD>
+                                        <TD>8</TD>
+                                        <TD>10</TD>
+                                        <TD>5</TD>
+                                        <TD>20</TD>
                                     </TR>
-                                    {% endfor %}
                                 </table>
                             </div>
                         </div>
